--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.jpa.show-sql=true
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bd_trabalhoboeres_otimizacaobandeco
 spring.datasource.username=root
-spring.datasource.password=p310j0a0fHa1708F
+spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 spring.cloud.compatibility-verifier.enabled=false
